--- a/views/layouts/home.ejs
+++ b/views/layouts/home.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>The Little Introduction To Programming</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-    <%- css('home') %>
+    <link href="/css/home.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <%- partial('shared/ie6') %>
