--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -3,9 +3,9 @@
   <head>
     <title>The Little Introduction To Programming</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-    <%- css('book') %>
+    <link href="/css/book.css" rel="stylesheet" type="text/css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <%- js('site') %>
+    <script src="/js/site.js"></script>
   </head>
   <body>
     <div id="header">
