--- a/public/css/scss/_base.scss
+++ b/public/css/scss/_base.scss
@@ -1,4 +1,4 @@
-@import '_mixins';
+@import 'mixins';
 
 *{padding:0;margin:0;}
 body{font-family:'Open Sans',sans-serif;color:#444;background:#f9f9f9;}
