--- a/views/layouts/home.ejs
+++ b/views/layouts/home.ejs
@@ -4,6 +4,7 @@
     <title>The Little Introduction To Programming</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="/css/home.css" rel="stylesheet" type="text/css">
+    <%- partial('shared/ga') %>
   </head>
   <body>
     <%- partial('shared/ie6') %>
