--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -6,6 +6,7 @@
     <link href="/css/book.css" rel="stylesheet" type="text/css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="/js/site.js"></script>
+    <%- partial('shared/ga') %>
   </head>
   <body>
     <div id="header">
