--- a/public/css/scss/home.scss
+++ b/public/css/scss/home.scss
@@ -12,3 +12,4 @@ li{padding:5px 10px;background:url(/images/arrow.png) no-repeat 0 12px;}
 #quick h2{font-size:1em;font-weight:normal;}
 #go{padding:10px 20px;margin-top:30px;display:inline-block;border:1px solid #555;@include gradient(#4a4a4a, #333333);border-radius:5px;color:#fff;line-height:25px;}
 #go:hover{color:#ffd;}
+.content{width:960px;margin:0 auto;}
