--- a/public/css/scss/book.scss
+++ b/public/css/scss/book.scss
@@ -3,7 +3,7 @@
 
 h1{color:#fff;font-size:1.5em;position:absolute;top:2px;text-shadow:1px 1px 2px #000;}
 h2{font-size:1.4em;}
-h3{font-size:1.2em;padding-top:10px;border-top:1px solid #aaa;}
+h3{font-size:1.2em;padding-top:20px;margin-top:30px;border-top:1px solid #aaa;}
 code{background:#fff;padding:2px;border:1px solid #aaa;border-radius:4px;}
 ul{margin-bottom:20px;}
 li{margin-left:20px;}
@@ -18,6 +18,7 @@ pre{padding:20px;border:1px solid #eee;border-radius:5px;margin-bottom:20px;}
 #menu a{color:#fff;text-decoration:none;display:block;padding:10px;}
 #menu a:hover{background:#444;}
 #content{padding-top:60px;}
+.content, #content{width:95%;margin:0 auto;position:relative;}
 #paging{margin-top:10px;padding-top:10px;border-top:2px solid #aaa;position:relative;}
 #paging a{padding:4px 10px;font-size:80%;background:#444;border-radius:4px;color:#fff;}
 #paging a:hover{background:#777;}
