--- a/views/shared/toc.ejs
+++ b/views/shared/toc.ejs
@@ -1,4 +1,4 @@
-<div id="toc">table of contents</div>
+<div id="toc"></div>
 <ul id="menu">
   <li><a href="/">home</a></li>
   <% for (var i = 1; i <= chapters.length; ++i) { -%>
