--- a/views/layouts/book.ejs
+++ b/views/layouts/book.ejs
@@ -12,12 +12,12 @@
     <div id="header">
       <div class="content">
         <h1>The Little Introduction To Programming</h1>
+        <%- partial('shared/toc') %>
       </div>
     </div>
     <div id="content">
       <%- partial('shared/ie6') %>
-      <div id="book"><%- body %></div>
-      <%- partial('shared/toc') %>
+      <%- body %>
     </div>
     <%- partial('shared/footer') %>
   </body>
