--- a/public/css/book.css
+++ b/public/css/book.css
@@ -26,7 +26,7 @@ pre {
     color: #3E853F; }
 
 pre, code {
-  font-family: 'Monaco', 'Consolas', monospace; }
+  font-family: "Monaco", "Consolas", monospace; }
 
 * {
   padding: 0;
@@ -70,17 +70,22 @@ a {
   border: 1px solid #000; }
 
 #ie6 {
-  border: 1px solid #fdd;
-  background: #fee;
+  border: 1px solid #faa;
+  background: #fcc;
   border-radius: 5px;
-  padding: 10px; }
+  padding: 3px;
+  text-align: center;
+  width: 700px;
+  margin: 0 auto; }
 
 h1 {
-  color: #fff;
   font-size: 1.5em;
   position: absolute;
   top: 2px;
   text-shadow: 1px 1px 2px #000; }
+
+h1 a {
+  color: #fff; }
 
 h2 {
   font-size: 1.4em; }
@@ -103,6 +108,12 @@ ul {
 li {
   margin-left: 20px; }
 
+ol {
+  margin-left: 20px; }
+
+ol li {
+  padding: 7px; }
+
 pre {
   padding: 20px;
   border: 1px solid #eee;
@@ -114,8 +125,10 @@ pre {
   background: #333333;
   background: -webkit-gradient(linear, left top, left bottom, from(#4a4a4a), to(#333333));
   background: -moz-linear-gradient(-90deg, #4a4a4a, #333333);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=$from, endColorstr=$to);
+  filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, startColorstr='#4a4a4a', endColorstr='#333333');
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#4a4a4a', endColorstr='#333333')";
   position: fixed;
+  left: 0;
   width: 100%;
   z-index: 10; }
 
@@ -130,7 +143,8 @@ pre {
   background: #222222;
   background: -webkit-gradient(linear, left top, left bottom, from(#333333), to(#222222));
   background: -moz-linear-gradient(-90deg, #333333, #222222);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=$from, endColorstr=$to);
+  filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, startColorstr='#333333', endColorstr='#222222');
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222')";
   -moz-user-select: none;
   -khtml-user-select: none;
   user-select: none;
@@ -142,8 +156,9 @@ pre {
   background: #4a4a4a; }
 
 #menu {
-  position: absolute;
-  right: 0;
+  z-index: 10;
+  position: fixed;
+  right: 2.5%;
   top: 40px;
   display: none;
   margin: 0;
@@ -201,3 +216,104 @@ pre {
 
 .code, p {
   margin-bottom: 15px; }
+
+#book {
+  margin-right: 250px;
+  padding-right: 50px;
+  border-right: 1px solid #aaa; }
+
+#runner {
+  position: fixed;
+  right: 10px;
+  top: 60px;
+  width: 265px; }
+
+.codingArea {
+  margin-top: 10px;
+  font-family: "Monaco", "Consolas", monospace;
+  font-size: 0.95em; }
+
+.codingArea > div {
+  width: 100%;
+  padding: 5px 10px; }
+
+.codingArea .goal {
+  border: 1px solid transparent;
+  background: #eee;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px; }
+
+.codingArea .goal.correct {
+  background: #cfc; }
+
+.codingArea .goal.incorrect {
+  background: #fcc; }
+
+.codingArea .buttons {
+  overflow: auto;
+  position: relative;
+  padding-left: 0;
+  padding-right: 20px; }
+
+.codingArea .buttons a {
+  padding: 4px 10px;
+  border: 1px solid #eee;
+  border-radius: 4px;
+  background: #444;
+  color: #fff; }
+
+.codingArea .buttons a:hover {
+  background: #111; }
+
+.codingArea .run {
+  float: left; }
+
+.codingArea .reset {
+  position: absolute;
+  right: 100px; }
+
+.codingArea .answer {
+  position: absolute;
+  right: 0; }
+
+textarea {
+  padding: 10px;
+  height: 125px;
+  border: 1px solid #afa;
+  width: 100%;
+  color: #444;
+  font-family: "Monaco", "Consolas", monospace;
+  font-size: 0.95em;
+  background: #efe;
+  outline: none; }
+
+.codingArea.error textarea {
+  border-color: #faa;
+  background: #fee; }
+
+.codingArea.error .goal {
+  background: #fcc; }
+
+#items.error {
+  border: 1px solid #faa;
+  background: #fee; }
+
+#items > div {
+  padding: 3px;
+  border-bottom: 1px solid #ccc; }
+
+#items > div:last-child {
+  border-bottom: none; }
+
+#funcList {
+  margin-top: 30px;
+  display: none;
+  border-top: 1px solid #aaa;
+  padding-top: 30px; }
+
+#funcList > div {
+  padding: 5px 0;
+  font-family: "Monaco", "Consolas", monospace; }
+
+#funcList .type, #funcList .desc {
+  padding: 7px 0 0 7px; }
