--- a/public/css/scss/_base.scss
+++ b/public/css/scss/_base.scss
@@ -1,4 +1,5 @@
 @import 'mixins';
+@import 'variables';
 
 *{padding:0;margin:0;}
 body{font-family:'Open Sans',sans-serif;color:#444;background:#f9f9f9;}
@@ -10,4 +11,4 @@ a{color:#229;text-decoration:none;}
 #links {float:right;}
 #links a{color:#fff;text-decoration:none;padding:10px 20px;border-radius:4px;border:1px solid transparent;}
 #links a:hover{background:#444;border:1px solid #000;}
-#ie6{border:1px solid #fdd;background:#fee;border-radius:5px;padding:10px;}
+#ie6{border:1px solid #faa;background:#fcc;border-radius:5px;padding:3px;text-align:center;width:700px;margin:0 auto;}
