--- a/public/css/scss/_mixins.scss
+++ b/public/css/scss/_mixins.scss
@@ -2,7 +2,8 @@
   background: $to;
   background: -webkit-gradient(linear, left top, left bottom, from($from), to($to));
   background: -moz-linear-gradient(-90deg, $from, $to);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=$from, endColorstr=$to);
+  filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, startColorstr='#{$from}', endColorstr='#{$to}');
+   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$from}', endColorstr='#{$to}')";
 }
 
 @mixin noselect() {
