--- a/public/css/scss/book.scss
+++ b/public/css/scss/book.scss
@@ -34,7 +34,7 @@ pre{padding:20px;border:1px solid #eee;border-radius:5px;margin-bottom:20px;}
 #runner{position:fixed;right:10px;top:60px;width:265px;}
 .codingArea{margin-top:10px;font-family:$code-font;font-size:0.95em;}
 .codingArea > div{width:100%;padding:5px 10px;}
-.codingArea .goal{border:1px solid transparent;background:#eee;border-top-left-radius:4px;border-top-right-radius:4px;}
+.codingArea .goal{border:1px solid transparent;background:#ddd;border-top-left-radius:4px;border-top-right-radius:4px;}
 .codingArea .buttons{overflow:auto;position:relative;padding-left:0;padding-right:20px;}
 .codingArea .buttons a{padding:4px 10px;border:1px solid #eee;border-radius:4px;background:#444;color:#fff;}
 .codingArea .buttons a:hover{background:#111;}
@@ -44,6 +44,7 @@ pre{padding:20px;border:1px solid #eee;border-radius:5px;margin-bottom:20px;}
 
 textarea{padding:1%;height:125px;border:1px solid #afa;width:100%;color:#444;font-family:$code-font;font-size:0.95em;background:#efe;outline: none;}
 textarea.answer{background:#eee;border:1px solid #ccc;display:none;}
+.codingArea.taller textarea{height:175px;}
 .codingArea.error textarea.input{border-color:#faa;background:#fee;}
 .codingArea.error .goal{background:#fcc;}
 
