--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <div id="quick">
       <h2>Ideal For...</h2>
       <ul>
-        <li>Beginners</li>
+        <li>Beginners and Students</li>
         <li>Parents with children who program</li>
         <li>Occasional coders (excel / reports)</li>
         <li>Insomniacs</li>
