--- a/public/css/scss/book.scss
+++ b/public/css/scss/book.scss
@@ -23,7 +23,7 @@ pre{padding:20px;border:1px solid #eee;border-radius:5px;margin-bottom:20px;}
 #menu a:hover{background:#444;}
 #content{padding-top:60px;}
 .content, #content{width:95%;margin:0 auto;position:relative;}
-#paging{margin-top:10px;padding-top:10px;border-top:2px solid #aaa;position:relative;}
+#paging{margin:10px 0 100px;padding-top:10px;border-top:2px solid #aaa;position:relative;}
 #paging a{padding:4px 10px;font-size:80%;background:#444;border-radius:4px;color:#fff;}
 #paging a:hover{background:#777;}
 #next{position:absolute;right:0;}
