--- a/public/css/book.css
+++ b/public/css/book.css
@@ -196,7 +196,7 @@ pre {
   position: relative; }
 
 #paging {
-  margin-top: 10px;
+  margin: 10px 0 100px;
   padding-top: 10px;
   border-top: 2px solid #aaa;
   position: relative; }
