--- a/public/css/scss/home.scss
+++ b/public/css/scss/home.scss
@@ -5,11 +5,26 @@ h1{padding-top:30px;text-align:center;color:#444;}
 ul{list-style:none;margin-bottom:50px;}
 li{padding:5px 10px;background:url(/images/arrow.png) no-repeat 0 12px;}
 #tagline{margin:15px 0 50px 0;text-align:right;font-style:italic;font-size:80%;}
-#info{background:#fff;overflow:auto;padding:30px 0;border-top:2px solid #ccc;border-bottom:1px solid #aaa;color:#666;margin-bottom:40px;}
+.alt{background:#fff;padding:30px 0;border-top:2px solid #ccc;border-bottom:1px solid #aaa;color:#666;margin-bottom:20px;}
+#info{overflow:auto;}
 #info p{margin-bottom:15px;}
 #desc{width:425px;float:left;line-height:28px;padding-right:50px;border-right:1px solid #ccc;}
 #quick{width:425px;margin-left:530px}
 #quick h2{font-size:1em;font-weight:normal;}
-#go{padding:10px 20px;border:1px solid #555;@include gradient(#4a4a4a, #333333);border-radius:5px 5px 5px 5px;color:#fff;line-height:25px;}
-#go:hover{color:#ffd;}
+.high a, #subscribe, #go{padding:10px 20px;border:1px solid #555;@include gradient(#4a4a4a, #333333);border-radius:5px;color:#fff;line-height:25px;}
+.high a:hover, #subscribe:hover, #go:hover{background:#888;}
 .content{width:960px;margin:0 auto;}
+
+#subscribe{overflow:auto;}
+form{margin:10px 0 0 25px;}
+label{display:block;}
+#email{padding:8px;border:1px solid #ddd;border-radius:4px;width:240px;}
+#subscribe{padding:2px 10px;}
+#suggestion{display:none;font-size:0.80em;margin:5px 0 0 20px;}
+#suggestLink{text-decoration:underline;}
+#suggestLink:hover{color:#aa9};
+
+
+.high{height:500px;}
+.high h1{margin-bottom:75px;}
+.high a{position:relative;top:25px;}
