--- a/views/layouts/home.ejs
+++ b/views/layouts/home.ejs
@@ -5,6 +5,8 @@
     <title>The Little Introduction To Programming</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="/css/home.css" rel="stylesheet" type="text/css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="/js/jquery.mailcheck.js"></script>
     <%- partial('shared/ga') %>
   </head>
   <body>
