--- a/views/unsubscribed.ejs
+++ b/views/unsubscribed.ejs
@@ -1,9 +1,8 @@
 <div class="content high">
   <% if (ok === true) { %>
-  <h1>Thanks for subscribing!</h1>
-  <p>We'll let you know when we update the book!</p>
+  <h1>Sorry to see you go</h1>
   <% } else { %>
-  <h1>There was a problem subscribing</h1>
+  <h1>There was a problem unsubscribing</h1>
   <p>Please try again later</p>
   <% } %>
   <p><a href="/" id="backhome">back home</a></p>
