Added sidenav + chapter 6

--- a/views/layouts/book.ejs
+++ b/views/layouts/book.ejs
@@ -6,7 +6,7 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="/css/book.css" rel="stylesheet" type="text/css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="/js/site.js"></script>
+    <script src="/js/book.js"></script>
     <%- partial('shared/ga') %>
   </head>
   <body>
