--- a/public/css/book.css
+++ b/public/css/book.css
@@ -96,6 +96,9 @@ h3 {
   margin-top: 30px;
   border-top: 1px solid #aaa; }
 
+h2 a, h3 a, h4 a {
+  color: #222; }
+
 code {
   background: #fff;
   padding: 2px;
@@ -327,3 +330,22 @@ textarea.answer {
 
 #funcList .desc {
   padding-bottom: 5px; }
+
+.sidelegend {
+  position: fixed;
+  overflow: hidden;
+  font-size: small;
+  padding-left: 20px; }
+
+.sidelegend a {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  padding: 1px 10px;
+  opacity: 0.2;
+  background: #697983;
+  color: white;
+  display: block; }
+
+.sidelegend a:hover {
+  text-decoration: none;
+  background: #495963; }
