--- a/public/css/scss/book.scss
+++ b/public/css/scss/book.scss
@@ -6,6 +6,7 @@ h1{font-size:1.5em;position:absolute;top:2px;text-shadow:1px 1px 2px #000;}
 h1 a{color:#fff;}
 h2{font-size:1.4em;}
 h3{font-size:1.2em;padding-top:20px;margin-top:30px;border-top:1px solid #aaa;}
+h2 a, h3 a, h4 a{color:#222;}
 code{background:#fff;padding:2px;border:1px solid #aaa;border-radius:4px;}
 ul{margin-bottom:20px;}
 li{margin-left:20px;}
@@ -55,3 +56,8 @@ textarea.answer{background:#eee;border:1px solid #ccc;display:none;}
 #funcList{margin-top:30px;display:none;border-top:1px solid #aaa;padding-top:30px;padding:10px 0;font-family:$code-font;font-size:0.9em;}
 #funcList .function{margin-top:10px;border-bottom:1px solid #eee;padding-bottom:10px;}
 #funcList .desc{padding-bottom:5px;}
+
+
+.sidelegend{position:fixed;overflow:hidden;font-size:small;padding-left:20px;}
+.sidelegend a{border-top-left-radius:10px;border-bottom-left-radius:10px;padding:1px 10px;opacity:0.2;background:#697983;color:white;display:block;}
+.sidelegend a:hover{text-decoration: none;background:#495963;}
