--- a/public/css/scss/home.scss
+++ b/public/css/scss/home.scss
@@ -4,10 +4,10 @@ html{background:#222;}
 h1{padding-top:30px;text-align:center;color:#444;}
 ul{list-style:none;margin-bottom:50px;}
 li{padding:5px 10px;background:url(/images/arrow.png) no-repeat 0 12px;}
-#tagline{margin:15px 0 50px 0;text-align:right;font-style:italic;font-size:80%;}
-.alt{background:#fff;padding:30px 0;border-top:2px solid #ccc;border-bottom:1px solid #aaa;color:#666;margin-bottom:20px;}
+#tagline{margin:15px 0 10px 0;text-align:right;font-style:italic;font-size:80%;}
+.alt{background:#fff;padding:30px 0;border-top:2px solid #ccc;border-bottom:1px solid #aaa;color:#666;margin:40px 0;}
 #info{overflow:auto;}
-#info p{margin-bottom:15px;}
+p{margin-bottom:15px;}
 #desc{width:425px;float:left;line-height:28px;padding-right:50px;border-right:1px solid #ccc;}
 #quick{width:425px;margin-left:530px}
 #quick h2{font-size:1em;font-weight:normal;}
@@ -23,7 +23,6 @@ label{display:block;}
 #suggestion{display:none;font-size:0.80em;margin:5px 0 0 20px;}
 #suggestLink{text-decoration:underline;}
 #suggestLink:hover{color:#aa9};
-
 
 .high{height:500px;}
 .high h1{margin-bottom:75px;}
