--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,20 @@
   </form>
 </div>
 
+<div class="alt">
+  <div class="content">
+    <h3>If You Need Help</h3>
+    <p>If you run into any problems or something isn't clear, you can leave a comment at the bottom of the chapter.<p>
+    <p>For more generic questions about programming, consider using <a href="http://www.stackoverflow.com">StackOverflow</a>, a popular and free website where programmers ask and answer questions. Spending time on StackOverflow is actually a great way to learn more about programming.</p>
+  </div>
+</div>
+
+<div class="content">
+  <h3>About</h3>
+  <p>The website and its contents are available <a href="#">on github</a>.</p>
+  <p>The contents are available under the Attribution-NonCommercial 3.0 Unported license. You should not have paid for this book. You are free to copy, distribute, modify or display the any or all of the material. However you may not use it, in any way, for commercial purposes.</p>
+  <p>You can see the full text of the license at: <a href="http://creativecommons.org/licenses/by-nc/3.0/legalcode">http://creativecommons.org/licenses/by-nc/3.0/legalcode</a></p>
+</div>
 <script>
 $('#email').on('blur', function() {
   $(this).mailcheck({
