--- a/public/css/home.css
+++ b/public/css/home.css
@@ -65,7 +65,7 @@ li {
   background: url(/images/arrow.png) no-repeat 0 12px; }
 
 #tagline {
-  margin: 15px 0 50px 0;
+  margin: 15px 0 10px 0;
   text-align: right;
   font-style: italic;
   font-size: 80%; }
@@ -76,12 +76,12 @@ li {
   border-top: 2px solid #ccc;
   border-bottom: 1px solid #aaa;
   color: #666;
-  margin-bottom: 20px; }
+  margin: 40px 0; }
 
 #info {
   overflow: auto; }
 
-#info p {
+p {
   margin-bottom: 15px; }
 
 #desc {
