support for multiple languages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         <li>Occasional coders (excel / reports)</li>
         <li>Insomniacs</li>
       </ul>
-      <a href="<%- chapter_link(1)%>" id="go">Start reading</a>
+      <a href="<%- chapter_link('en', 1)%>" id="go">Start reading</a>
     </div>
   </div>
 </div>
