--- a/views/shared/toc.ejs
+++ b/views/shared/toc.ejs
@@ -1,6 +1,6 @@
 <ul id="menu">
   <li><a href="/">home</a></li>
   <% for (var i = 1; i <= chapters.length; ++i) { -%>
-  <li><a href="<%=: chapter_link(i) %>"><%= i %>. <%= chapters[i-1]%></a></li>
+  <li><a href="<%=: chapter_link(language, i) %>"><%= i %>. <%= chapters[i-1]%></a></li>
   <% } -%>
 </ul>
