--- a/views/shared/paging.ejs
+++ b/views/shared/paging.ejs
@@ -1,8 +1,8 @@
 <div id="paging">
   <% if (chapter > 1) { -%>
-  <a href="<%= chapter_link(chapter-1) %>" id="prev">prev</a>
+  <a href="<%= chapter_link(language, chapter-1) %>" id="prev">prev</a>
   <% } %>
   <% if (chapter < chapters.length) { -%>
-  <a href="<%= chapter_link(chapter+1) %>" id="next">next</a>
+  <a href="<%= chapter_link(language, chapter+1) %>" id="next">next</a>
   <% } -%>
 </div>
