--- a/public/css/book.css
+++ b/public/css/book.css
@@ -38,7 +38,7 @@ body {
   background: #f9f9f9; }
 
 p {
-  line-height: 1.8em; }
+  line-height: 2em; }
 
 a {
   color: #229;
@@ -88,12 +88,13 @@ h1 a {
   color: #fff; }
 
 h2 {
-  font-size: 1.4em; }
+  font-size: 1.6em;
+  margin-top: 15px; }
 
 h3 {
   font-size: 1.2em;
-  padding-top: 20px;
-  margin-top: 30px;
+  padding-top: 30px;
+  margin: 30px 0 15px;
   border-top: 1px solid #aaa; }
 
 h2 a, h3 a, h4 a {
@@ -154,7 +155,8 @@ pre {
   cursor: pointer;
   width: 250px;
   text-align: center;
-  font-size: 1em; }
+  font-size: 1em;
+  margin: 0; }
 
 #toc:hover {
   background: #4a4a4a; }
@@ -162,7 +164,7 @@ pre {
 #menu {
   z-index: 10;
   position: fixed;
-  right: 2.5%;
+  right: 5%;
   top: 40px;
   display: none;
   margin: 0;
@@ -194,7 +196,7 @@ pre {
   padding-top: 60px; }
 
 .content, #content {
-  width: 95%;
+  width: 90%;
   margin: 0 auto;
   position: relative; }
 
