--- a/public/css/scss/book.scss
+++ b/public/css/scss/book.scss
@@ -4,8 +4,8 @@
 
 h1{font-size:1.5em;position:absolute;top:2px;text-shadow:1px 1px 2px #000;}
 h1 a{color:#fff;}
-h2{font-size:1.4em;}
-h3{font-size:1.2em;padding-top:20px;margin-top:30px;border-top:1px solid #aaa;}
+h2{font-size:1.6em;margin-top:15px;}
+h3{font-size:1.2em;padding-top:30px;margin:30px 0 15px;border-top:1px solid #aaa;}
 h2 a, h3 a, h4 a{color:#222;}
 code{background:#fff;padding:2px;border:1px solid #aaa;border-radius:4px;}
 ul{margin-bottom:20px;}
@@ -15,15 +15,15 @@ ol li {padding:7px;}
 pre{padding:20px;border:1px solid #eee;border-radius:5px;margin-bottom:20px;}
 
 #header{height:40px;@include gradient(#4a4a4a, #333333);position:fixed;left:0;width:100%;z-index:10;}
-#toc{position:absolute;right:0;height:40px;line-height:40px;border:solid #000;border-width:0 1px;color:#fff;@include gradient(#333333, #222222);@include noselect();cursor:pointer;width:250px;text-align:center;font-size:1em;}
+#toc{position:absolute;right:0;height:40px;line-height:40px;border:solid #000;border-width:0 1px;color:#fff;@include gradient(#333333, #222222);@include noselect();cursor:pointer;width:250px;text-align:center;font-size:1em;margin:0;}
 #toc:hover{background:#4a4a4a;}
-#menu{z-index:10;position:fixed;right:2.5%;top:40px;display:none;margin:0;padding:0;list-style:none;background:#222;border:1px solid #000;width:250px;border-bottom-left-radius:3px;border-bottom-right-radius:3px;}
+#menu{z-index:10;position:fixed;right:5%;top:40px;display:none;margin:0;padding:0;list-style:none;background:#222;border:1px solid #000;width:250px;border-bottom-left-radius:3px;border-bottom-right-radius:3px;}
 #menu li{border-bottom:1px solid #000;margin:0;}
 #menu li:last-child{border-radius:5px;}
 #menu a{color:#fff;text-decoration:none;display:block;padding:10px;}
 #menu a:hover{background:#444;}
 #content{padding-top:60px;}
-.content, #content{width:95%;margin:0 auto;position:relative;}
+.content, #content{width:90%;margin:0 auto;position:relative;}
 #paging{margin:10px 0 100px;padding-top:10px;border-top:2px solid #aaa;position:relative;}
 #paging a{padding:4px 10px;font-size:80%;background:#444;border-radius:4px;color:#fff;}
 #paging a:hover{background:#777;}
