--- a/public/css/scss/book.scss
+++ b/public/css/scss/book.scss
@@ -61,3 +61,5 @@ textarea.answer{background:#eee;border:1px solid #ccc;display:none;}
 .sidelegend{position:fixed;overflow:hidden;font-size:small;padding-left:20px;}
 .sidelegend a{border-top-left-radius:10px;border-bottom-left-radius:10px;padding:1px 10px;opacity:0.2;background:#697983;color:white;display:block;}
 .sidelegend a:hover{text-decoration: none;background:#495963;}
+.anchor {height: 0;display: block;}
+a:target + h3 {color: #886;}
