changed from Perry Neal to homepage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,15 +7,15 @@
   <div class="content">
     <div id="desc">
       <p>Programming isn't something that you can learn in an hour. But you can begin to appreciate it.</p>
-      <p>This book will teach you the fundamentals of programming and act as a foundation for whatever your programming-goals may be.</p>
+      <p>This book will teach you the fundamentals of programming and act as a foundation for whatever your programming goals may be.</p>
       <p>Rather than ignore complexities, we will face them head-on, in small steps, and unshroud the mysteries of computer language.</p>
     </div>
     <div id="quick">
-      <h2>Ideal For...</h2>
+      <h2>Ideal for...</h2>
       <ul>
         <li>Beginners and Students</li>
         <li>Parents with children who program</li>
-        <li>Occasional coders (excel / reports)</li>
+        <li>Occasional coders (spreadsheets / reports)</li>
         <li>Insomniacs</li>
       </ul>
       <a href="<%- chapter_link('en', 1)%>" id="go">Start reading</a>
@@ -44,7 +44,7 @@
 <div class="content">
   <h3>About</h3>
   <p>The website and its contents are available <a href="#">on github</a>.</p>
-  <p>The contents are available under the Attribution-NonCommercial 3.0 Unported license. You should not have paid for this book. You are free to copy, distribute, modify or display the any or all of the material. However you may not use it, in any way, for commercial purposes.</p>
+  <p>The contents are available under the Attribution-NonCommercial 3.0 Unported license. You should not have paid for this book. You are free to copy, distribute, modify or display any or all of the material. However you may not use it, in any way, for commercial purposes.</p>
   <p>You can see the full text of the license at: <a href="http://creativecommons.org/licenses/by-nc/3.0/legalcode">http://creativecommons.org/licenses/by-nc/3.0/legalcode</a></p>
 </div>
 <script>
