--- a/public/css/scss/home.scss
+++ b/public/css/scss/home.scss
@@ -2,7 +2,7 @@
 
 html{background:#222;}
 h1{padding-top:30px;text-align:center;color:#444;}
-ul{list-style:none;margin-bottom:50px;}
+ul{list-style:none;margin:0 0 50px 15px;}
 li{padding:5px 10px;background:url(/images/arrow.png) no-repeat 0 12px;}
 #tagline{margin:15px 0 10px 0;text-align:right;font-style:italic;font-size:80%;}
 .alt{background:#fff;padding:30px 0;border-top:2px solid #ccc;border-bottom:1px solid #aaa;color:#666;margin:40px 0;}
