--- a/views/shared/paging.ejs
+++ b/views/shared/paging.ejs
@@ -1,6 +1,6 @@
 <div id="paging">
   <% if (chapter > 1) { -%>
-  <a href="<%= chapter_link(language, chapter-1) %>" id="prev">prev</a>
+  <a href="<%= chapter_link(language, chapter-1) %>" id="prev">previous</a>
   <% } %>
   <% if (chapter < chapters.length) { -%>
   <a href="<%= chapter_link(language, chapter+1) %>" id="next">next</a>
