--- a/views/shared/footer.ejs
+++ b/views/shared/footer.ejs
@@ -1,6 +1,6 @@
 <div id="footer">
   <div class="content">
-    <% if (!development && false) { %>
+    <% if (!development) { %>
     <div class="addthis_toolbox addthis_default_style ">
       <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
       <a class="addthis_button_tweet"></a>
