added github link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
 
 <div class="content">
   <h3>About</h3>
-  <p>The website and its contents are available <a href="#">on github</a>.</p>
+  <p>The website and its contents are available <a href="https://github.com/karlseguin/the-little-introduction-to-programming">on github</a>.</p>
   <p>The contents are available under the Attribution-NonCommercial 3.0 Unported license. You should not have paid for this book. You are free to copy, distribute, modify or display any or all of the material. However you may not use it, in any way, for commercial purposes.</p>
   <p>You can see the full text of the license at: <a href="http://creativecommons.org/licenses/by-nc/3.0/legalcode">http://creativecommons.org/licenses/by-nc/3.0/legalcode</a></p>
 </div>
