normalize addthis paths + added short caching to home and chapter pages

--- a/views/shared/footer.ejs
+++ b/views/shared/footer.ejs
@@ -6,6 +6,9 @@
       <a class="addthis_button_tweet"></a>
       <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
     </div>
+    <script>
+    var addthis_share = {url: 'http://codingintro.com' + top.location.pathname};
+    </script>
     <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=xa-4fbcaf735d1c76e6"></script>
     <% } %>
     <div id="links">
